[package]
name = "dmlive"
version = "5.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# tokio-rustls = "0.22"
# webpki-roots = "*"
# tokio-tungstenite = { version = "0.18", features = ["rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls-vendored"] }
reqwest = { version = "0.11", default-features = false, features = ["brotli", "deflate", "gzip", "json", "native-tls-vendored", "cookies"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
regex = "1.10"
fancy-regex = "0.13"
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
url = "2.5"
urlencoding = "2.1"
base64 = "0.21"
md5 = "*"
libc = "0.2"
toml = "0.8"
html-escape = "0.2"
futures = "0.3"
roxmltree = "0.19"
async-channel = "2.1"
directories = "5.0"
anyhow = "1"
bytes = "1.5"
# boa_engine = { features = ["console"], version = "0.15.0" }
tars-stream = { path = "tars-stream"}
ring = "*"
cbc = "*"
aes = "*"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
async-compression = { version = "0.4", features = ["tokio", "deflate", "brotli"] }

[profile.release]
panic = 'abort'
opt-level = 3
lto = true
