[package]
name = "dmlive"
version = "5.7.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# tokio-rustls = "0.22"
# webpki-roots = "*"
# rustls = { version = "*", features = ["ring"] }
# tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls-vendored"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "brotli", "deflate", "gzip", "json", "native-tls-vendored", "cookies"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
bincode = "2"
# wincode = { version = "0.2", features = ["derive"] }
rand = "0.9"
regex = "1"
fancy-regex = "0.17"
uuid = { version = "1.19", features = ["v4"] }
chrono = "0.4"
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
md5 = "*"
libc = "0.2"
toml = "0.9"
html-escape = "0.2"
futures = "0.3"
roxmltree = "0.21"
async-channel = "2.5"
directories = "6"
anyhow = "1"
bytes = "1.11"
tars-stream = { path = "tars-stream"}
ring = "*"
cbc = "*"
aes = "*"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-compression = { version = "0.4", features = ["tokio", "deflate", "brotli"] }

[target.'cfg(target_os = "android")'.dependencies]
rquickjs = { version = "0.11", features = ["bindgen"] }
[target.'cfg(not(target_os = "android"))'.dependencies]
rquickjs = "0.11"

[profile.release]
panic = 'abort'
opt-level = 3
lto = true
