[package]
name = "tars-stream"
version = "0.1.1"
authors = ["zerolocust <zerolocust@gmail.com>"]
description = "for tencent/Tars TARS Protocol encoding/decoding"
homepage = "https://github.com/zerolocusta/tars-stream"
repository = "https://github.com/zerolocusta/tars-stream"
edition = "2024"

license = "MIT"

[dependencies]
bytes = "1.10"
quick-error = "2"

[dev-dependencies]
uuid = { version = "1.16", features = ["v4"] }
rand = "0.9"
